changing primary working computer, committing to carry over changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,32 @@
 @import "~bootstrap/scss/bootstrap";
 
 .App {
-  background-color: #353535;
+  background: rgb(0, 212, 255);
+  background: linear-gradient(
+    333deg,
+    rgba(0, 212, 255, 1) 0%,
+    rgba(32, 78, 215, 1) 50%,
+    rgba(0, 212, 255, 1) 100%
+  );
   padding-bottom: 2em;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  li {
-    color: #fff;
+// .App {
+//   background: linear-gradient(-45deg, #20d7b9, #20b1d7, #204ed7, #00d4ff);
+//   background-size: 400% 400%;
+//   animation: gradient 15s ease infinite;
+//   height: 100%;
+//   padding-bottom: 2em;
+// }
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
