adding style improvements, forecast features, current weather improvements, etc.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
 
 .App {
-  background: rgb(0, 212, 255);
-  background: linear-gradient(
-    333deg,
-    rgba(0, 212, 255, 1) 0%,
-    rgba(32, 78, 215, 1) 50%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  // background: rgb(0, 212, 255);
+  // background: linear-gradient(
+  //   333deg,
+  //   rgba(0, 212, 255, 1) 0%,
+  //   rgba(32, 78, 215, 1) 50%,
+  //   rgba(0, 212, 255, 1) 100%
+  // );
   padding-bottom: 2em;
 }
 
