small updates to styles and forecast data

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,5 +1,6 @@
 .greeting-container {
-  background-color: #e9c46a;
+  background-color: #ef476f;
+  color: #fff;
   h2 {
     font-family: "Courgette", cursive;
   }
