--- a/src/components/Widgets/Recipes/Recipes.scss
+++ b/src/components/Widgets/Recipes/Recipes.scss
@@ -3,7 +3,9 @@
   background-color: #fff;
   border-radius: 0.5em;
 
-  h2 {
+  .recipes-header {
+    font-size: 3.5rem;
+    font-weight: 600;
     color: #000;
   }
 
