--- a/src/components/UIElements/Button.scss
+++ b/src/components/UIElements/Button.scss
@@ -1,14 +1,14 @@
 .btn-custom {
-  background-color: #ef476f;
-  border-color: #ef476f;
-  color: #fff;
-  transition: 0.1s ease-in;
+  background-color: #ef476f !important;
+  border-color: #ef476f !important;
+  color: #fff !important;
+  transition: 0.1s ease-in !important;
 
   &:hover,
   &:focus,
   &:active {
-    background-color: #fff;
-    border-color: #ef476f;
-    color: #ef476f;
+    background-color: #fff !important;
+    border-color: #ef476f !important;
+    color: #ef476f !important;
   }
 }
