--- a/src/components/Widgets/Recipes/Recipes.scss
+++ b/src/components/Widgets/Recipes/Recipes.scss
@@ -65,8 +65,48 @@
       }
     }
 
+    .card-footer,
+    .card-subfooter {
+      background-color: #edf2f4 !important;
+    }
+
+    .card-subfooter {
+      border-bottom-right-radius: 0.375rem;
+      border-bottom-left-radius: 0.375rem;
+    }
+
     .card-title {
       color: #000;
+    }
+  }
+}
+
+.saved-recipes-row {
+  a {
+    text-decoration: none;
+    h4,
+    p {
+      color: #000;
+    }
+  }
+  .saved-recipe-container {
+    transition: all linear 200ms;
+    box-shadow: 6px 10px 11px 2px rgba(0, 0, 0, 0.43);
+    -webkit-box-shadow: 6px 10px 11px 2px rgba(0, 0, 0, 0.43);
+    -moz-box-shadow: 6px 10px 11px 2px rgba(0, 0, 0, 0.43);
+    border-radius: 10px;
+
+    &:hover {
+      transform: scale(1.005);
+      transition: all linear 200ms;
+      cursor: pointer;
+    }
+
+    .saved-recipe-img-container {
+      img {
+        height: 100px;
+        width: 100px;
+      }
     }
   }
 }
