--- a/src/components/Widgets/Recipes/Recipes.scss
+++ b/src/components/Widgets/Recipes/Recipes.scss
@@ -52,7 +52,8 @@
         margin: 1rem auto;
         border-radius: 50%;
         border: 12px solid #ef476f;
-        height: 260px;
+        max-width: 100%;
+        height: auto;
       }
       .recipe-text {
         color: #000;
